# votery

./: .gitignore  .typos.toml  Cargo.toml  README.md  rustfmt.toml
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs  orders.rs
crates/lib/src/formats/: binary.rs  cardinal.rs  mod.rs  orders.rs  soi.rs  specific.rs  toc.rs  toi.rs
crates/lib/src/generators/: gaussian.rs
crates/lib/src/methods/: approval.rs  borda.rs  dowdall.rs  fptp.rs  mod.rs  random_ballot.rs  star.rs
crates/orders/: Cargo.toml
crates/orders/src/: lib.rs
crates/orders/src/binary/: dense.rs  mod.rs
crates/orders/src/cardinal/: dense.rs  mod.rs
crates/orders/src/dense/: binary.rs  cardinal.rs  mod.rs  soc.rs  soi.rs  specific.rs  toc.rs  toi.rs  total_ranking.rs
crates/orders/src/formats/: binary.rs  cardinal.rs  mod.rs  orders.rs  soc.rs  soi.rs  specific.rs  toc.rs  toi.rs  total_ranking.rs
crates/orders/src/order/: mod.rs  rank_ref.rs
crates/orders/src/partial_order/: bool_matrix.rs  mod.rs
crates/orders/src/rank/: dense.rs  dense_complete.rs  mod.rs  rank.rs  rank_ref.rs  total_rank.rs  total_rank_ref.rs
crates/yee/: Cargo.toml
crates/yee-diagram/: Cargo.toml  README.md
crates/yee-diagram/src/: candidates.rs  color.rs  main.rs
crates/yee/src/: candidates.rs  color.rs  lib.rs  vector.rs
src/: lib.rs  tarjan.rs
src/formats/: binary.rs  cardinal.rs  mod.rs  partial_ranking.rs  soc.rs  soi.rs  specific.rs  toc.rs  toi.rs  total_ranking.rs
src/generators/: gaussian.rs  mod.rs
src/methods/: approval.rs  borda.rs  fptp.rs  mod.rs  random_ballot.rs
(+47 files in other folders)
