[package]
name = "votery"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orders = { path = "../orders" }
rand = { version = "0.9.0", features = ["std_rng"] }
rand_chacha = "0.9.0"
rand_distr = "0.5.1"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
